kubernetes/004-myapp-copy-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cert-copy
  namespace: traefik-v2
spec:
  containers:
  - name: cert-copy
    image: nginx:alpine
    command: ["/bin/sh", "-c", "sleep 3600"]
    securityContext:
      runAsUser: 0
      runAsGroup: 0
    volumeMounts:
    - name: cert-volume
      mountPath: /cert
  volumes:
  - name: cert-volume
    persistentVolumeClaim:
      claimName: certs
