kubernetes/004-myapp-foobar-metrics-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik-v2
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.mykubernetes.com`) && PathPrefix(`/myapp/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
      middlewares:
        - name: test-auth
        - name: strip-myapp-prefix
  tls:
    secretName: traefik-dashboard-cert
